[gd_scene load_steps=6 format=3 uid="uid://cai3lwh2ndgcv"]

[ext_resource type="Script" path="res://UI/Menus/ShopMenu/shop_menu_box.gd" id="1_40sy3"]
[ext_resource type="FontFile" uid="uid://bpahbhn01mt3o" path="res://Common/Fonts/Kenney Pixel.ttf" id="1_ojer3"]
[ext_resource type="PackedScene" path="res://UI/Menus/menu_cursor.tscn" id="2_xgofl"]
[ext_resource type="Script" path="res://UI/Menus/ShopMenu/menu_item.gd" id="3_wdr1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4468"]
bg_color = Color(0.20952, 0.1488, 0.48, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="ShopMenuBox" type="CanvasLayer"]
script = ExtResource("1_40sy3")

[node name="ShopMenuContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -29.0
offset_right = 136.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ShopMenuContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o4468")

[node name="MarginContainer" type="MarginContainer" parent="ShopMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Item1" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Bezerker Potion"
autowrap_mode = 2
script = ExtResource("3_wdr1m")

[node name="Item1Cost" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer/Item1"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Item 1"

[node name="Item2" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Item 2"
autowrap_mode = 2
script = ExtResource("3_wdr1m")

[node name="Item2Cost" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer/Item2"]
custom_minimum_size = Vector2(50, 20)
offset_top = 40.0
offset_right = 40.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Item 2"

[node name="Item3" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Item 3"
autowrap_mode = 2
script = ExtResource("3_wdr1m")

[node name="Item3Cost" type="Label" parent="ShopMenuContainer/MarginContainer/HBoxContainer/Item3"]
custom_minimum_size = Vector2(50, 20)
offset_top = 40.0
offset_right = 40.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("1_ojer3")
theme_override_font_sizes/font_size = 16
text = "Item 3"

[node name="menu_cursor" parent="." instance=ExtResource("2_xgofl")]
offset_right = 9.0
offset_bottom = 9.0
scale = Vector2(2.5, 2.5)
stretch_mode = 2
menu_parent_path = NodePath("../ShopMenuContainer/MarginContainer/HBoxContainer")
cursor_offset = Vector2(0, 0)

[connection signal="cursor_broken" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item1" to="." method="_on_cursor_broken"]
[connection signal="cursor_selected" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item1" to="." method="_on_cursor_selected"]
[connection signal="cursor_broken" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item2" to="." method="_on_cursor_broken"]
[connection signal="cursor_selected" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item2" to="." method="_on_cursor_selected"]
[connection signal="cursor_broken" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item3" to="." method="_on_cursor_broken"]
[connection signal="cursor_selected" from="ShopMenuContainer/MarginContainer/HBoxContainer/Item3" to="." method="_on_cursor_selected"]
